# cmakegen

./: .gitignore  README.md  cmake_generator.txt  two.txt
cmakegen/: __main__.py  cmake_generator.py  flag_parser.py  invocation_log.py
compilers/: compiler++.py  compiler.py
example/: build_and_test.sh  main.cpp  mathutils.cpp  mathutils.h
src/: CMakeLists.txt  impl0.cpp  main.cpp
tests/: test_cmake_generator.py  test_flag_parser.py  test_integration.py  test_invocation_log.py
